// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Textarea Snapshots tests should match snapshot 1`] = `
<div>
  <div
    class="component component size-48 size-48"
  >
    <div
      class="inner inner inner inner filled"
    >
      <div
        class="inputWrapper wrapper size-48"
      >
        <div
          class="input size-48"
        >
          <textarea
            autocomplete="on"
            class="textarea textarea size-48 overflowHidden filled"
            rows="1"
          >
            value
          </textarea>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Textarea Snapshots tests should match snapshot with custom counter 1`] = `
<div>
  <div
    class="component component size-48 size-48"
  >
    <div
      class="inner inner inner inner filled"
    >
      <div
        class="inputWrapper wrapper size-48"
      >
        <div
          class="input size-48"
        >
          <textarea
            autocomplete="on"
            class="textarea textarea size-48 overflowHidden filled"
            rows="1"
          >
            value
          </textarea>
        </div>
      </div>
    </div>
    <span
      class="sub hint"
    >
      Custom counter
    </span>
  </div>
</div>
`;

exports[`Textarea Snapshots tests should match snapshot with custom scrollbar 1`] = `
<div>
  <div
    class="component component size-48 size-48"
  >
    <div
      class="inner inner inner inner filled"
    >
      <div
        class="inputWrapper wrapper size-48"
      >
        <div
          class="input size-48"
        >
          <textarea
            autocomplete="on"
            class="textarea textarea size-48 overflowHidden customScrollbar filled"
            rows="1"
          >
            value
          </textarea>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Textarea Snapshots tests should match snapshot with default counter 1`] = `
<div>
  <div
    class="component component size-48 size-48"
  >
    <div
      class="inner inner inner inner filled"
    >
      <div
        class="inputWrapper wrapper size-48"
      >
        <div
          class="input size-48"
        >
          <textarea
            autocomplete="on"
            class="textarea textarea size-48 overflowHidden filled"
            rows="1"
          >
            value
          </textarea>
        </div>
      </div>
    </div>
    <span
      class="sub hint"
    >
      5/500 символов
    </span>
  </div>
</div>
`;
